// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel getItemWrap switchType : fade 1`] = `
.c0 {
  overflow: hidden;
  vertical-align: top;
  display: inline-block;
  width: 40rem;
  height: 20rem;
  opacity: 1;
  position: absolute;
  opacity: 0;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

<div>
  <div
    className="c0"
    style={Object {}}
  >
    hello world
  </div>
</div>
`;

exports[`Carousel getItemWrap switchType : horizontal 1`] = `
.c0 {
  overflow: hidden;
  vertical-align: top;
  display: inline-block;
  width: 40rem;
  height: 20rem;
  opacity: 1;
  position: relative;
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

<div>
  <div
    className="c0"
    style={Object {}}
  >
    hello world
  </div>
</div>
`;

exports[`Carousel getItemWrap switchType : vertical 1`] = `
.c0 {
  overflow: hidden;
  vertical-align: top;
  display: inline-block;
  width: 40rem;
  height: 20rem;
  opacity: 1;
  position: relative;
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

<div>
  <div
    className="c0"
    style={Object {}}
  >
    hello world
  </div>
</div>
`;
